Revert "remove margin"
This reverts commit c8cc405b7ef007013c54c74fb1322c77c60d33a9.

--- a/www/form/app-form.less
+++ b/www/form/app-form.less
@@ -1375,6 +1375,9 @@
                 outline: @variables_focus_style;
                 border-radius: @variables_radius;
             }
+            &:last-of-type {
+                margin-right: 0.2rem;
+            }
         }
         div.cp-form-poll-choice {
             cursor: pointer;
