--- a/customize.dist/src/less2/include/badges.less
+++ b/customize.dist/src/less2/include/badges.less
@@ -21,32 +21,24 @@
     --LessLoader_require: LessLoader_currentFile();
 }
 
-@badges-icon-color: @cryptpad_color_grey_800;
-@badges-bg-color: @cp_kanban-color0;
-@badges: {
-    admin: extract(@cp_palette, 3);
-    moderator: extract(@cp_palette, 1);
-    premium: extract(@cp_palette, 8);
-}
 & {
     i.cp-badge {
         width: var(--badges-width);
         height: var(--badges-width);
-        box-sizing: border-box;
-        border: 1px solid @cryptpad_text_col;
+        box-sizing: content-box;
         border-radius: 50%;
         display: inline-flex;
         justify-content: center;
         align-items: center;
         font-size: var(--badges-font);
-        color: @badges-icon-color;
-        background-color: @badges-bg-color;
+        color: @cp_badges-color;
+        background-color: @cryptpad_color_link;
         z-index: 10;
         &.cp-selected {
             outline-offset: 3px;
             outline: 2px solid @cryptpad_text_col;
         }
-        each(@badges, {
+        each(@cp_badges-bg, {
             &[data-badge="@{key}"] {
                 background-color: @value;
             }
