--- a/customize.dist/src/less2/include/messenger.less
+++ b/customize.dist/src/less2/include/messenger.less
@@ -13,12 +13,12 @@
 ) {
     @msg-color: @cryptpad_text_col;
     @msg-color-hover: contrast(@msg-color, lighten(@msg-color, 10%), darken(@msg-color, 10%));
-    @msg-bg-color: @bg-color;
-    @invert: @bg-color;
-    @msg-bg-color-light: contrast(@invert, lighten(@bg-color, 5%), darken(@bg-color, 5%));
-    @msg-bg-color-lighter: contrast(@invert, lighten(@bg-color, 10%), darken(@bg-color, 10%));
-    @msg-bg-color-dark: fade(@cp_messenger-fg, 10%);
-    @msg-bg-color-darker: contrast(@bg-color, lighten(@bg-color, 10%), darken(@bg-color, 10%));
+
+    @msg-bg-color: @cp_app-bg;
+    @msg-bg-color-dark: @cp_toolbar-bg2;
+    @msg-bg-color-darker: @cp_toolbar-bg3;
+    @msg-bg-color-light: @cp_toolbar-bg2;
+    @msg-bg-color-lighter: @cp_toolbar-bg3;
 };
 .messenger_main(
     @bg-color: @cp_messenger-bg,
@@ -117,9 +117,17 @@
                     }
                 }
             }
+            i.cp-badge {
+                color: var(--msg-bg-color-dark);
+                border-color: var(--msg-bg-color-dark);
+            }
             &:hover {
                 background-color: @msg-bg-color-darker;
                 background-color: var(--msg-bg-color-darker);
+                i.cp-badge {
+                    color: var(--msg-bg-color-darker);
+                    border-color: var(--msg-bg-color-darker);
+                }
             }
             &.cp-app-contacts-notify {
                 animation: notif 2s ease-in-out infinite;
@@ -237,8 +245,12 @@
             padding: 20px;
         }
         .cp-app-contacts-header {
-            background-color: @msg-bg-color-dark;
-            background-color: var(--msg-bg-color-dark);
+            background-color: @msg-bg-color-lighter;
+            background-color: var(--msg-bg-color-lighter);
+            i.cp-badge {
+                color: var(--msg-bg-color-lighter);
+                border-color: var(--msg-bg-color-lighter);
+            }
             padding: 0;
             display: flex;
             justify-content: space-between;
