--- a/customize.dist/src/less2/include/toolbar.less
+++ b/customize.dist/src/less2/include/toolbar.less
@@ -218,13 +218,22 @@
                 height: 48px;
                 padding: 5px;
                 margin: 2px 0;
-                background: @cp_toolbar-fade1;
+                background: @cp_toolbar-bg2;
+                border-radius: @variables_radius;
                 border-right: 3px solid transparent;
                 .avatar_main(35px);
+                i.cp-badge {
+                    color: @cp_toolbar-bg2;
+                    border-color: @cp_toolbar-bg2;
+                }
                 &.cp-userlist-clickable {
                     cursor: pointer;
                     &:hover {
-                        background: @cp_toolbar-fade3;
+                        background: @cp_toolbar-bg3;
+                        i.cp-badge {
+                            color: @cp_toolbar-bg3;
+                            border-color: @cp_toolbar-bg3;
+                        }
                     }
                 }
                 .cp-toolbar-userlist-rightcol {
