change margin value

--- a/www/form/app-form.less
+++ b/www/form/app-form.less
@@ -1376,7 +1376,8 @@
                 border-radius: @variables_radius;
             }
             &:last-of-type {
-                margin-right: 0.2rem;
+                margin-right: 0.1rem;
+                margin-bottom: 0.1rem;
             }
         }
         div.cp-form-poll-choice {
