Fix checklist items in profile description

--- a/www/profile/app-profile.less
+++ b/www/profile/app-profile.less
@@ -9,6 +9,7 @@
 @import (reference) '../../customize/src/less2/include/variables.less';
 @import (reference) '../../customize/src/less2/include/badges.less';
 @import (reference) '../../customize/src/less2/include/avatar.less';
+@import (reference) "../../customize/src/less2/include/markdown.less";
 
 &.cp-app-profile {
 
@@ -196,6 +197,7 @@
         font-size: 16px;
         max-width: 100%;
         //margin-bottom: 20px;
+        .markdown_cryptpad();
         .cp-app-profile-description-code {
             display: none;
             .cp-markdown-toolbar {
