--- a/www/form/app-form.less
+++ b/www/form/app-form.less
@@ -575,6 +575,11 @@
                             text-align: left;
                             a {
                                 color: @cryptpad_color_link;
+                                text-decoration: none;
+                                &:focus-visible {
+                                    outline: @variables_focus_style;
+                                    border-radius: @variables_radius;
+                                }
                             }
                         }
                         .alert-danger {
