--- a/www/form/app-form.less
+++ b/www/form/app-form.less
@@ -721,7 +721,7 @@
                             a {
                                 color: @cryptpad_color_link;
                             }
-                            a:focus-visible {
+                            li:focus-visible, a:focus-visible {
                                 outline: @variables_focus_style;
                                 border-radius: @variables_radius;
                             }
