add margin to conditional section

--- a/www/form/app-form.less
+++ b/www/form/app-form.less
@@ -368,9 +368,7 @@
                         align-items: center;
                         margin-bottom: 10px;
                         flex-wrap: wrap;
-                        & > * {
-                            margin-right: 10px;
-                        }
+                        gap:0.5rem;
                         .cp-dropdown-container button {
                             max-width: 200px;
                             overflow: hidden;
