import lucide library + edit icons on homepage

--- a/customize.dist/src/less2/include/infopages.less
+++ b/customize.dist/src/less2/include/infopages.less
@@ -209,10 +209,8 @@ body.html {
                 border-radius: @infopages-radius;
                 padding: 0.5em 0.7em;
                 white-space: nowrap;
-                display: inline-block;
-                i {
-                    margin-right: 5px;
-                }
+                display: inline-flex;
+                align-items: center;
                 &:hover {
                     background-color: @cp_static-card-bg;
                     color: @cryptpad_text_col;
@@ -225,10 +223,8 @@ body.html {
         .cp-footer-language {
             padding: 10px;
             margin-right: 10px;
-            i {
-                font-size: 1.3em;
-                margin-right: 5px;
-            }
+            display: inline-flex;
+            align-items: center;
             select {
                 min-width: 0;
                 background-color: @cp_static-card-bg;
@@ -290,7 +286,8 @@ body.html {
             padding: 0.5em 0.7em;
             margin: 5px;
             color: @cp_static-link;
-            display: inline-block;
+            display: flex;
+            align-items: center;
             img {
                 max-height: 30px;
                 margin-right: 10px;
@@ -304,14 +301,10 @@ body.html {
             &:focus-visible {
                 outline: @variables_focus_style;
             }
-            i {
-                margin-right: 5px;
-            }
         }
         .cp-register-btn {
             background-color: @cp_static-topbar-fg;
             color: @cp_static-bg;
-            display: inline-block;
             &:hover {
                 background-color: @cp_static-card-bg;
                 color: @cryptpad_text_col;
