--- a/customize.dist/src/less2/pages/page-index.less
+++ b/customize.dist/src/less2/pages/page-index.less
@@ -53,6 +53,12 @@
         }
     }
 
+    .lucide {
+        width: 1.2em;
+        height: 1.2em;
+        margin-right: 0.2rem;
+    }
+
     .cp-home-hero {
         width: 100%;
         align-self: center;
@@ -126,9 +132,8 @@
             font-size: 1.4em;
             line-height: 100%;
             color: fade(@cryptpad_text_col, 80%);
-            i {
-                margin-right: 5px;
-            }
+            display: inline-flex;
+            align-items: center;
         }
         .cp-app-grid-apps {
             display: flex;
