--- a/customize.dist/src/less2/pages/page-index.less
+++ b/customize.dist/src/less2/pages/page-index.less
@@ -237,7 +237,8 @@
         a.cp-drive-btn {
             color: @cryptpad_text_col;
             font-size: 1.5rem;
-            display: block;
+            display: inline-flex;
+            align-items: center;
             height: min-content;
             flex-shrink: 0;
             width: fit-content;
@@ -250,10 +251,9 @@
             &:hover {
                 background-color: fade(@cryptpad_text_col, 10%);
             }
-            i {
+            svg {
                 color: @cryptpad_color_brand;
                 margin-right: 10px;
-                font-size: 1.3em;
             }
         }
         .cp-sub-prompt {
