update icons on login page

--- a/customize.dist/src/less2/include/infopages.less
+++ b/customize.dist/src/less2/include/infopages.less
@@ -51,6 +51,11 @@ body.html {
         outline: @variables_focus_style;
         border-radius: @variables_radius;
     }
+    .lucide {
+        width: 1.2em;
+        height: 1.2em;
+        margin-right: 0.2rem;
+    }
     border: 0;
     padding: 0;
     margin: 0;
@@ -289,7 +294,8 @@ body.html {
             display: flex;
             align-items: center;
             img {
-                max-height: 30px;
+                width: 1.3em;
+                height: 1.3em;
                 margin-right: 10px;
             }
             &.cp-back-home {
