--- a/www/settings/app-settings.less
+++ b/www/settings/app-settings.less
@@ -333,6 +333,9 @@
                         font-size: inherit;
                         line-height: inherit;
                     }
+                    * {
+                        box-sizing: content-box;
+                    }
                 }
                 .cp-markdown-toggle-button {
                     .markdown-toolbar-button-style();
