--- a/customize.dist/src/less2/include/toolbar.less
+++ b/customize.dist/src/less2/include/toolbar.less
@@ -996,6 +996,8 @@
     }
     .cp-toolbar-dropdown-nowrap {
         white-space: nowrap;
+        display: inline-flex;
+        align-items: center;
     }
     .cp-toolbar-bottom {
         color: @cp_toolbar-bottom-fg;
