edit toggle view mode button

--- a/customize.dist/src/less2/include/drive.less
+++ b/customize.dist/src/less2/include/drive.less
@@ -1058,7 +1058,7 @@
             // .fa-list, .fa-th-large,
             .cp-app-drive-viewmode-button {
                 order: 25;
-                i {
+                svg {
                     margin-right: 0;
                 }
             }
