edit history icons

--- a/customize.dist/src/less2/include/drive.less
+++ b/customize.dist/src/less2/include/drive.less
@@ -1054,13 +1054,13 @@
             }
         }
         .cp-toolbar-bottom-right {
-            .fa-history { order: 50; }
+            .lucide-history { order: 50; }
             // .fa-list, .fa-th-large,
             .cp-app-drive-viewmode-button {
                 order: 25;
-                svg {
-                    margin-right: 0;
-                }
+            }
+            svg {
+                margin-right: 0;
             }
             #cp-app-drive-toolbar-context-mobile, #cp-app-drive-toolbar-contextbuttons { order: 0; }
             #cp-app-drive-toolbar-context-mobile {
