--- a/customize.dist/src/less2/include/toolbar.less
+++ b/customize.dist/src/less2/include/toolbar.less
@@ -1108,7 +1108,7 @@
                 .cp-toolbar-name, .cp-button-name, .cp-dropdown-button-title {
                     display: none;
                 }
-                i, span {
+                i, span, svg {
                     margin-right: 0;
                 }
             }
