edit drive tree icons

--- a/customize.dist/src/less2/include/drive.less
+++ b/customize.dist/src/less2/include/drive.less
@@ -350,7 +350,7 @@
                     cursor: pointer;
                     margin: 0 0 2px -5px;
                     padding-left: 5px;
-                    .fa, .cptools {
+                    .fa, .cptools, svg {
                         display: inline-block;
                         min-width: 0;
                         width: 20px;
@@ -387,7 +387,8 @@
             li {
                 padding: 0;
                 .cp-app-drive-element-row {
-                    display: block;
+                    display: inline-flex;
+                    align-items: center;
                     padding-left: 20px;
                     .leftside-menu-category_main();
                     margin: 0;
