edit state icons

--- a/customize.dist/src/less2/include/drive.less
+++ b/customize.dist/src/less2/include/drive.less
@@ -697,6 +697,8 @@
                 .cp-app-drive-element-state, .cp-app-drive-element-menu {
                     position: absolute;
                     top: 3px;
+                    display: flex;
+                    flex-direction: column;
                     .fa, .cptools, svg {
                         margin: 0;
                         font-size: 18px;
