--- a/customize.dist/src/less2/include/toolbar.less
+++ b/customize.dist/src/less2/include/toolbar.less
@@ -438,6 +438,10 @@
             .toolbar_button;
             &.cp-notifications-bell, &.cp-maintenance-wrench {
                 color: @cryptpad_text_col;
+                svg {
+                    height: @toolbar_line-height;
+                    width: @toolbar_line-height;
+                }
             }
         }
 
@@ -782,7 +786,7 @@
                 .cp-dropdown-button-title {
                     position: absolute;
                     bottom: 10px;
-                    right: 16px;
+                    right: 10px;
                     font-size: 14px;
                     border: 1px solid;
                     border-radius: 50%;
