edit icons on drive

--- a/customize.dist/src/less2/include/drive.less
+++ b/customize.dist/src/less2/include/drive.less
@@ -585,7 +585,7 @@
                 color: @cryptpad_color_link;
                 text-decoration: underline;
             }
-            span {
+            svg {
                 cursor: pointer;
                 float: right;
                 margin-top: 0.5em;
