--- a/customize.dist/src/less2/include/help.less
+++ b/customize.dist/src/less2/include/help.less
@@ -12,7 +12,8 @@
 };
 & {
     .cp-help-container {
-
+        display:inline-flex;
+        align-items: center;
         position: relative;
         background-color: @cp_help-bg;
         max-height: 50%;
@@ -25,7 +26,6 @@
             border: none;
             position: absolute;
             color: @cryptpad_text_col;
-            top: 5px;
             right: 5px;
             &:focus-visible {
                 outline: @variables_focus_style;
