update icons on menu dropdown

--- a/customize.dist/src/less2/include/toolbar.less
+++ b/customize.dist/src/less2/include/toolbar.less
@@ -439,8 +439,9 @@
             &.cp-notifications-bell, &.cp-maintenance-wrench {
                 color: @cryptpad_text_col;
                 svg {
-                    height: @toolbar_line-height;
-                    width: @toolbar_line-height;
+                    margin:0;
+                    height: 2.5rem;
+                    width: 2.5rem;
                 }
             }
         }
