fix sidebar width

--- a/customize.dist/src/less2/include/drive.less
+++ b/customize.dist/src/less2/include/drive.less
@@ -391,6 +391,7 @@
                 .cp-app-drive-element-row {
                     display: inline-flex;
                     align-items: center;
+                    width: 100%;
                     padding-left: 20px;
                     .leftside-menu-category_main();
                     margin: 0;
