--- a/customize.dist/src/less2/include/dropdown.less
+++ b/customize.dist/src/less2/include/dropdown.less
@@ -122,6 +122,10 @@
                     line-height: 1em;
                     align-items: center;
 
+                    span {
+                        display: inline-flex;
+                        align-items: center;
+                    }
                     &:not(.fa) {
                         font: @dropdown_font;
                     }
