--- a/customize.dist/src/less2/include/modals-ui-elements.less
+++ b/customize.dist/src/less2/include/modals-ui-elements.less
@@ -129,16 +129,16 @@
 
     // Access modal
     button.cp-access-add {
-        i {
+        svg {
             margin-right: 0px !important;
         }
-        i.fa-arrow-left {
+        svg[data-lucide='arrow-left'] {
             display: inline;
             @media (max-width: @browser_media-medium-screen) {
                 display: none;
             }
         }
-        i.fa-arrow-up {
+        svg[data-lucide='arrow-up'] {
             display: none;
             @media (max-width: @browser_media-medium-screen) {
                 display: inline;
