--- a/customize.dist/src/less2/include/contextmenu.less
+++ b/customize.dist/src/less2/include/contextmenu.less
@@ -39,10 +39,9 @@
                         color: inherit;
                     }
                 }
-                .dropdown-toggle {
-                    transform: rotate(270deg);
+                span svg {
+                    margin-right: 0;
                     margin-left: 1rem;
-                    float: right;
                 }
                 .dropdown-menu {
                     top: -0.7rem;
