--- a/www/notifications/app-notifications.less
+++ b/www/notifications/app-notifications.less
@@ -108,8 +108,9 @@
                     }
                 }
                 .cp-avatar-calendar {
-                    font-size: 45px;
-                    padding: 12px;
+                    width: 2rem;
+                    height: 2rem;
+                    margin: 1rem 0 1rem 1rem;
                 }
                 &.cp-app-notification-archived {
                     background-color: @cp_notif-bg;
