update icons on calendar

--- a/www/calendar/app-calendar.less
+++ b/www/calendar/app-calendar.less
@@ -594,6 +594,9 @@
                 background-color: fade(@cp_toolbar-fg, 50%);
                 cursor: pointer;
             }
+            svg {
+                margin: 0;
+            }
         }
     }
 
@@ -658,6 +661,9 @@
                 padding: 5px;
                 border-radius: @variables_radius;
                 background-color: @cp_sidebar-left-bg;
+                svg {
+                    margin: 0;
+                }
                 &:not(.cp-unclickable) {
                     cursor: pointer;
                 }
