update calendar dropdown icons

--- a/www/calendar/app-calendar.less
+++ b/www/calendar/app-calendar.less
@@ -669,8 +669,10 @@
                 }
                 .cp-dropdown-container {
                     position: initial;
-
                     .cp-dropdown-content{
+                        svg {
+                            margin-right: 0.2rem;
+                        }
                         @media screen and (max-width: 600px)
                         {
                             left: 50%;
