update settings page

--- a/customize.dist/src/less2/include/forms.less
+++ b/customize.dist/src/less2/include/forms.less
@@ -64,12 +64,12 @@
         }
     }
     &.mfa-enabled {
-        span, i {
+        span, i, svg {
             color: @cp_settings_enabled;
         }
     }
     &.mfa-disabled {
-        span, i {
+        span, i, svg {
             color: @cp_settings_disabled;
         }
     }
