--- a/www/settings/app-settings.less
+++ b/www/settings/app-settings.less
@@ -179,10 +179,9 @@
                 color: @cp_sidebar-hint;
             }
             .cp-settings-mfa-status {
-                & > i {
-                    margin-right: 5px;
-                }
                 margin: 1em 0;
+                display: inline-flex;
+                align-items: center;
             }
             .cp-settings-mfa {
                 .cp-password-container {
