update whiteboard buttons

--- a/customize.dist/src/less2/include/toolbar.less
+++ b/customize.dist/src/less2/include/toolbar.less
@@ -1089,8 +1089,8 @@
         you hover perfectly. The same is true of the drive's grid/list view toggle.
 */
             position: relative;
-            .fa {
-                margin-right: 0px;
+            svg {
+                margin-right: 0;
             }
             .cp-collapsed-notif {
                 display: inline-block;
