update rich-text icons

--- a/www/pad/app-pad.less
+++ b/www/pad/app-pad.less
@@ -238,6 +238,9 @@ body.cp-app-pad {
         }
     }
     #cke_1_contents {
+        svg {
+            margin: 0;
+        }
         flex: 1;
         display: flex;
         height: auto !important;
